--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v1
+        uses: crazy-max/ghaction-setup-docker@v1
 
       - name: Build Apptainer SIF
         uses: hotwa/apptainerbuild@v1.0
