--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: crazy-max/ghaction-setup-docker@v1
+        uses: docker-practice/actions-setup-docker@master
 
       - name: Build Apptainer SIF
         uses: hotwa/apptainerbuild@v1.0
         with:
           dockerfile_path: 'debian.dockerfile'
-          
+
