--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Apptainer SIF
-        uses: hotwa/apptainerbuild@v1.0
+        uses:  hotwa/docker-to-sif-action@v1.0
         with:
           dockerfile_path: 'debian.dockerfile'
