--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: Test Apptainerbuild Action
-on:
-  push:
+on: 
+  push: 
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build_sif:
