--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: SIF-file
-          path: /github/workspace/apptainer.sif.tar.gz
+          path: apptainer.sif.tar.gz
           
