--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,10 @@ jobs:
         uses: hotwa/docker-to-sif-action@v1.0
         with:
           dockerfile_path: 'debian.dockerfile'
-          # apptainer_key: ${{ secrets.APPTAINER_KEY }}
+          apptainer_key: ${{ secrets.APPTAINER_KEY }}
           
       - name: Upload SIF file
         uses: actions/upload-artifact@v2
         with:
           name: SIF-file
           path: /github/workspace/*.sif.tar.gz
-          
