--- a/.github/workflows/testv2.yml
+++ b/.github/workflows/testv2.yml
@@ -13,12 +13,14 @@ jobs:
       - name: Convert Dockerfile to SIF
         uses: hotwa/docker-to-sif-action@v1.0
         with:
-          dockerfile_path: 'debian.dockerfile'
           apptainer_key: ${{ secrets.APPTAINER_KEY }}
+          aliyun_image: registry.cn-hangzhou.aliyuncs.com/hotwa/ubuntu:ubuntu-jammy-desktop
+          aliyun_username: ${{ secrets.ALIYUN_USERNAME }}
+          aliyun_password: ${{ secrets.ALIYUN_PASSWORD }}
+
           
       - name: Upload SIF file
         uses: actions/upload-artifact@v2
         with:
           name: SIF-file
           path: apptainer.sif.tar.gz
-          
